<resources>
    <string name="app_name">Vueltap Lite</string>
    <string name="vueltap">Vueltap</string>
    <string name="iniciar_sesion">Iniciar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved">Guardando...</string>
    <string name="cuenta_nueva">Crear una nueva cuenta</string>

    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidado_pass">¿Has olvidado la contraseña?</string>
    <string name="registrate">Regístrate</string>
    <string name="no_cuenta">¿Aun no tienes cuenta?</string>
    <string name="aceptar">Aceptar y crear cuenta</string>
    <string name="next">Siguiente</string>
    <string name="names">Nombres *</string>
    <string name="lastname">Apellidos *</string>
    <string name="phone">Teléfono *</string>
    <string name="dni_number">Número de cédula *</string>
    <string name="address">Dirección *</string>
    <string name="msg_isempty">Por favor complete este campo.</string>
    <string name="help">\?\</string>
    <string name="title_activity_main_table">MainTableActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_basic">MainBasicActivity</string>
</resources>
